# 3-python-package-se_project3

./: Pipfile  README.md  pyproject.toml  uno.py
.github/: build.yaml
.github/workflows/: build.yaml
examples/: example_terminaluno.py
examples /: example_terminaluno.py
src/terminalUno/: __init__.py  __main__.py  uno.py
tests/: test_uno.py
