[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []

[project]
name = "terminalUno"
description = "A python package"
version = "0.0.0"
authors = [
  { name="Jiaxi Zhang", email="jz5751@nyu.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "Uno", "game"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-spring2025/3-python-package-se_project3"
"Repository" = "https://github.com/software-students-spring2025/3-python-package-se_project3.git"
"Bug Tracker" = "https://github.com/software-students-spring2025/3-python-package-se_project3/issues"

[project.scripts]
terminalUno = "terminalUno.__main__:main"